--- a/neahtta/package.json
+++ b/neahtta/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "GNU",
   "dependencies": {
+    "lodash": "^4.17.11",
     "uglify-js": "^2.4.19"
   },
   "devDependencies": {
